--- a/.github/ISSUE_TEMPLATE/maintenance-task.yml
+++ b/.github/ISSUE_TEMPLATE/maintenance-task.yml
@@ -1,5 +1,5 @@
-name: 🚀 Maintenance Task
-description: "Describe a meintenance task for Zufall"
+name: 💻 Maintenance Task
+description: "Describe a maintenance task for Zufall"
 title: "[Maintenance]: "
 labels: ["type: maintenance task"]
 body:
