--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,7 +1,7 @@
 name: 🚀 Feature Request
 description: "Suggest an idea for Zufall"
 title: "[Feature]: "
-labels: ["type: feature request"]
+labels: ['type: feature request']
 body:
   - type: markdown
     attributes:
