Try to fix the 'new' prefill bug for the maintenance and feature request templates

--- a/.github/ISSUE_TEMPLATE/maintenance-task.yml
+++ b/.github/ISSUE_TEMPLATE/maintenance-task.yml
@@ -23,6 +23,8 @@ body:
       label: 🛠️ Action
       description: Do you have a suggestions for improving the current state?
       placeholder: This could be implemented by...
+    validations:
+      required: true
   - type: dropdown
     id: contribute
     attributes:
