--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -26,7 +26,7 @@ body:
     validations:
       required: true
   - type: textarea
-    id: action
+    id: act # Naming this 'action' pre-filles the field with 'new' xD
     attributes:
       label: 🛠️ Action
       description: How do you envision this feature being implemented? Any ideas or suggestions?
